win or lose pop-up box works now and shows user and computer choice as images

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ and triggered when the player clicks on their choice. It'll display their choice
         <div class="hidden" id="results_box">
             <div class="row">
                 <div class="column">
-                    <h2 id="winner_image"> Winner Choice:</h2>
+                    <h2 id="player_image"> Player Choice:</h2>
                 </div>
 
                 <div class="column">
